--- a/index.html
+++ b/index.html
@@ -235,7 +235,11 @@
                     <h4>Phone</h4>
                     <!-- <p>+1 (555) 123-GOLD</p> -->
                     <!-- <p>+1 (407) 728-1193</p> -->
-                     <p><a href="tel:+14077281193">+1 (407) 728-1193</a></p>
+                     <!-- <p><a href="tel:+14077281193">+1 (407) 728-1193</a></p> -->
+                     <p><a href="tel:+13052133494">+1 (305) 213-3494</a></p>
+                    <!-- Burner number -->
+                     <!-- <p><a href="tel:+14077281193">+1 (407) 728-1193</a></p>
+                    +1 (305) 213-3494 -->
 
                 </div>
                 <div class="contact-item">
